--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -21,7 +21,7 @@
 
     <form [formGroup]="exampleForm" (ngSubmit)="onSubmit()">
       <ion-row class="interest-options">
-        <ion-col size="6" formArrayName="interests" *ngFor="let interest of exampleForm.controls.interests.controls; let i=index;">
+        <ion-col size="6" formArrayName="interests" *ngFor="let interest of interests.controls; let i=index;">
           <app-custom-checkbox class="custom-checkbox">
             <div class="checkbox-content" [style.--img-src]="interestsList[i].image">
               <ion-label class="checkbox-title">{{interestsList[i].name}}</ion-label>
